--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/humanitix-event-connector.zip
-          asset_name: humanitix-event-connector.zip
+          asset_name: humanitix-event-connector-${{ github.ref }}.zip
           asset_content_type: application/zip
